# dndapp5e

./: Cargo.toml
src/: main.rs
src/dice/: mod.rs
src/dnd/: mod.rs
src/dnd/enums/: mod.rs
src/rest_client/: mod.rs
