[package]
name = "dndapp5e"
version = "0.1.0"
authors = ["JT Parrish <jtparrish@outlook.com>", "Michael Goldstein <mgoldstein322@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = "1.0.125"
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["blocking"] }
rand = { version = "0.8.4", features = ["std", "std_rng"] }
lazy_static = "1.4.0"
# itertools = "0.10.1"
